[AOS bug] Fix horizontal scroll

--- a/css/partials/_body.scss
+++ b/css/partials/_body.scss
@@ -36,3 +36,8 @@ main {
         }
     }
 }
+
+.hide-scroll {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
